--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "practice-deutsch"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 [dependencies]
@@ -11,3 +11,4 @@ rodio = "0.17.3"
 reqwest = { version = "0.11.23", features = ["blocking"] }
 bytes = "1.5.0"
 clap = { version = "4.4.11", features = ["derive"] }
+thirtyfour_sync = "0.27.1"
