--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ csv = "1.3.0"
 serde = { version = "1.0.193", features = ["derive"] }
 rand = "0.8.5"
 rodio = "0.17.3"
-reqwest = { version = "0.11.23", features = ["blocking"] }
+reqwest = { version = "0.11.23", features = ["blocking", "cookies", "gzip"] }
+scraper = "0.18.1"
 bytes = "1.5.0"
 clap = { version = "4.4.11", features = ["derive"] }
 thirtyfour_sync = "0.27.1"
