--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ bytes = "1.5.0"
 clap = { version = "4.4.11", features = ["derive"] }
 thirtyfour_sync = "0.27.1"
 base64 = "0.21.5"
+valid = "0.3.1"
